samples/_failures_safe/1761603017_4f6a2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7785a3f.c: In function ‘main’:
./samples/SAFE/__tmp_c7785a3f.c:153:5: error: expected declaration or statement at end of input
  153 |     printf("Matrix Addition:\n");
      |     ^~~~~~
